--- a/photographer.html
+++ b/photographer.html
@@ -1,37 +1,42 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="assets/favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
-    <title>Fisheye - photographe </title>
-  </head>
-  <body>
-    <header>
-      <img src="assets/images/logo.png" class="logo" />
-    </header>
-    <main id="main">
-      <div class="photograph-header">
-        <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="assets/favicon.png">
+  <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+  <title>Fisheye - Photographe</title>
+  <link href="css/style.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+  <header>
+    <a href="./index.html">
+      <img src="assets/images/logo.png" class="header__logo" alt="fisheye logo">
+    </a>
+</header>
+  <main id="main">
+    <div class="photograph-header">
+      <div class="photograph-header_infos">
+
       </div>
-    </main>
-    <div id="contact_modal">
-			<div class="modal">
-				<header>
-          <h2>Contactez-moi</h2>
-          <img src="assets/icons/close.svg" onclick="closeModal()" />
-        </header>
-				<form>
-					<div>
-						<label>Prénom</label>
-						<input />
-					</div>
-          <button class="contact_button">Envoyer</button>
-				</form>
-			</div>
-		</div>
-    <script src="/scripts/pages/photographer.js"></script>
-    <script src="/scripts/utils/contactForm.js"></script>
-  </body>
+      <button class="btn photograph-header_contact">Contactez-moi</button>
+      <div class="photograph-header_portrait">
+
+      </div>
+    </div>
+    <div class="medias-filter">
+      <label for="filter" class="medias-filter_label">Trier par :</label>
+        <select name="filter" id="filter" class="medias-filter_select" data-context="filter-select">
+          <option value="0" class="medias-filter_select-opt">Popularité</option>
+          <option value="1" class="medias-filter_select-opt">Date</option>
+          <option value="2" class="medias-filter_select-opt">Titre</option>
+        </select>
+    </div>
+    <div class="medias-container">
+
+    </div>
+  </main>
+  <script src="./scripts/pages/photographer.js" type="module"></script>
+</body>
 </html>
