Ajout  du compteur de likes fixe

--- a/photographer.html
+++ b/photographer.html
@@ -37,6 +37,15 @@
 
     </div>
   </main>
+  <div class="floating-likes">
+    <div class="floating-likes_infos">
+      <span class="floating-likes_info--number">0</span>
+      <i class="fa-solid fa-heart floating-likes_info--icon"></i>
+    </div>
+    <p class="floating-likes_price">
+
+    </p>
+  </div>
   <script src="./scripts/pages/photographer.js" type="module"></script>
 </body>
 </html>
