--- a/photographer.html
+++ b/photographer.html
@@ -14,6 +14,7 @@
     <a href="./index.html">
       <img src="assets/images/logo.png" class="header__logo" alt="fisheye logo">
     </a>
+    <h1 class="sr-only header__title">dynamic_title</h1>
 </header>
   <main id="main">
     <div class="photograph-header">
@@ -43,8 +44,8 @@
       <span class="floating-likes_info--number">0</span>
       <i class="fa-solid fa-heart floating-likes_info--icon"></i>
     </div>
-    <p class="floating-likes_price">
-    </p>
+    <div class="floating-likes_price">
+    </div>
   </div>
   <!-- Contact Modal -->
   <dialog class="contact-modal">
@@ -55,6 +56,7 @@
       </div>
       <button class="contact-modal__close" data-context="contact-btn-close">
         <i class="fa-solid fa-xmark contact-modal__close--icon" data-context="contact-btn-close"></i>
+        <span class="sr-only contact-modal__btn-close">Close</span>
       </button>
     </div>
     <form class="contact-modal__form">
@@ -92,6 +94,28 @@
       <button type="button" class="btn contact-modal__btn" id="contact-modal__btn" data-context="btn-modal-send">Envoyer</button>
       <p class="contact-modal__validate">Votre message à bien été envoyé. <br>Le formulaire se fermera automatiquement dans : <span class="automatic__close__timer"></span> secondes</p>
     </form>
+  </dialog>
+  <!-- LIGHTBOX -->
+  <dialog class="lightbox-modal">
+    <div class="lb-container__left">
+      <button class="lb-btn__prev">
+        <i class="fa-solid fa-chevron-left"></i>
+        <span class="sr-only">Previous</span>
+      </button>
+    </div>
+    <div class="lb-container__middle">
+
+    </div>
+    <div class="lb-container__rigth">
+      <button class="lb-btn__close">
+        <i class="fa-solid fa-xmark"></i>
+        <span class="sr-only">Close</span>
+      </button>
+      <button class="lb-btn__next">
+        <i class="fa-solid fa-chevron-right"></i>
+        <span class="sr-only">Next</span>
+      </button>
+    </div>
   </dialog>
   <script src="./scripts/pages/photographer.js" type="module"></script>
 </body>
