Correction de region ARIA et de rôles

--- a/photographer.html
+++ b/photographer.html
@@ -39,7 +39,7 @@
     </div>
   </main>
   <!-- Floating Price -->
-  <div class="floating-likes">
+  <div class="floating-likes" role="region" aria-label="Compteur de likes">
     <div class="floating-likes_infos">
       <span class="floating-likes_info--number">0</span>
       <i class="fa-solid fa-heart floating-likes_info--icon"></i>
