Correction pour lecteur d'écran

--- a/photographer.html
+++ b/photographer.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <a href="./index.html">
-      <img src="assets/images/logo.png" class="header__logo" alt="fisheye logo">
+      <img src="assets/images/logo.png" class="header__logo" alt="Retour vers l'accueil.">
     </a>
     <h1 class="sr-only header__title">dynamic_title</h1>
 </header>
@@ -21,7 +21,7 @@
       <div class="photograph-header_infos">
 
       </div>
-      <button class="btn photograph-header_contact" data-context="contact-btn-open">Contactez-moi</button>
+      <button class="btn photograph-header_contact" data-context="contact-btn-open" aria-label="Contactez-moi">Contactez-moi</button>
       <div class="photograph-header_portrait">
 
       </div>
